# cirroe-fde

./: .gitignore  README.md  debug_actual.txt  main.py  original.py  playground.py  pyproject.toml  railway.json  requirements.txt  server.py  test.py
include/: constants.py  file_cache.py  finetune.py  utils.py
include/cache/: cached_user_data.json
include/llm/prompt/: base.py  few_shot.py
include/prompts/: bug_issue_prompt.txt  coalesce_docu.txt  coalesce_issue.txt  coalesce_response.txt  debug_discord.txt  debug_issue.txt  debug_issue_final.txt  debug_issue_tools.txt  eval_agent_response.txt  eval_issue_preprocess.txt  execute_step.txt  requires_dev_team_prompt.txt
include/prompts/example_builder/: action_classifier.txt  example_debugger.txt  execute_creation.txt  execute_modification.txt  plan_builder.txt  (+5 more)
scripts/: firecrawl_demo.py  get_sorted_issues_list.py  oss_ghub_issue_analysis.py  solve_oss_ghub_issues.py
scripts/data/: oss_ticket_stats.csv
src/: classifier.py  runbook.py
src/core/: executor.py  handle_issue.py  issue_classifier.py  metrics.py  tools.py
src/example_creator/: crawl.py  create.py  sandbox.py
src/integrations/: base_kb.py  cloud.py  documentation_kb.py  github.py  humanlayer_integration.py  issue_kb.py  merge.py  slack.py
src/model/: auth.py  code.py  documentation.py  issue.py  news.py  runbook.py  ticket.py
src/server/: handle_actions.py
src/storage/: supa.py  vector.py
src/sutils/: base_action.py  handle_issue_action.py  handle_ticket_action.py
test/: docu_test.py  eval_agent.py  issue_test.py  traceback_test.py
(+27 files in other folders)
