[tool.poetry]
name = "cirroe-fde"
version = "0.1.0"
description = "A new forward deployed engineer for infra teams"
authors = ["AbhigyaWangoo <abhigyawangoo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
humanlayer = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
